--- a/index.html
+++ b/index.html
@@ -1,233 +1,159 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="styles.css" type="text/css">
-  <title>Pingendo - mobile app</title>
-  <meta name="description" content="Pingendo app landing page">
-  <meta name="keywords" content="Pingendo app mobile responsive ios android"> </head>
 
-<body class="text-center">
-  <nav class="navbar navbar-inverse navbar-expand-md navbar-dark bg-primary">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Artravelland</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.min.css" rel="stylesheet">
+
+  <!-- Temporary navbar container fix -->
+  <style>
+    .navbar-toggler {
+      z-index: 1;
+    }
+    @media (max-width: 576px) {
+      nav > .container {
+        width: 100%;
+      }
+    }
+  </style>
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav id="mainNav" class="navbar fixed-top navbar-toggleable-md navbar-light">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
+      Menu <i class="fa fa-bars"></i>
+    </button>
     <div class="container">
-      <a class="navbar-brand" href="#cover">Artravelland</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav ">
+      <a class="navbar-brand" href="#page-top">Artravelland</a>
+      <div class="collapse navbar-collapse" id="navbarExample">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="features.html">features</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#download">Download</a>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="pricing.html">pricing</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-        <a class="btn navbar-btn btn-secondary mx-3" href="#download">Download</a>
       </div>
     </div>
   </nav>
-  <div class="cover d-flex align-items-center pt-5 bg-primary" id="cover">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-md-left align-self-center my-5">
-          <h1 class="text-white display-1">Pingendo</h1>
-          <h4 class="text-white">The mobile app you were waiting for</h4>
-          <div class="row mt-5">
-            <div class="col-md-5 col-6">
-              <a href="#download">
-                <img class="center-block img-fluid d-block" src="https://pingendo.github.io/templates/app/download_android.png"> </a>
-            </div>
-            <div class="col-md-5 col-6">
-              <a href="#download">
-                <img class="center-block img-fluid d-block" src="https://pingendo.github.io/templates/app/download_ios.png"> </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img class="img-fluid d-block mx-auto" src="https://pingendo.github.io/templates/app/iphone_cover.png"> </div>
-      </div>
-    </div>
-  </div>
-  <div class="section py-5 text-md-left" id="app">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7 push-md-5 my-3 align-self-center">
-          <h2 class="text-primary my-3">Easy, yet powerful</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-            pretium quis, sem. </p>
-          <a href="features.html" class="btn btn-outline-primary btn-lg">Learn more</a>
-        </div>
-        <div class="col-md-5 pull-md-7 my-3">
-          <img src="https://pingendo.github.io/templates/app/iphone_trequarti.png" class="img-fluid d-block mx-auto"> </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5 text-left">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 align-self-center my-3">
-          <h2 class="text-primary my-3">Works everywhere</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-            pretium quis, sem. </p>
-          <a href="#download" class="btn btn-outline-primary btn-lg">Download</a>
-        </div>
-        <div class="col-md-6 my-3">
-          <img src="https://pingendo.github.io/templates/app/iphone_ipad.png" class="img-fluid d-block mx-auto"> </div>
-      </div>
-    </div>
-  </div>
-  <div class="section py-5" id="features">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="pb-4 text-primary">Features from the future</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="align-self-center text-right col-lg-4 col-md-6">
-          <div class="row my-5">
-            <div class="col-10">
-              <h4>Responsive design</h4>
-              <p>Based on fluid design principles.
-                <br>Works with screen resolution</p>
-            </div>
-            <div class="col-2"><i class="d-block fa fa-3x fa-columns"></i></div>
-          </div>
-          <div class="row my-5">
-            <div class="col-10">
-              <h4>Customized settings</h4>
-              <p>Choose settings depending on the criteria you value the most</p>
-            </div>
-            <div class="col-2"><i class="d-block fa  fa-3x fa-circle-thin"></i></div>
-          </div>
-          <div class="row my-5">
-            <div class="col-10">
-              <h4>Connect</h4>
-              <p>In-app chat panel 24/7 active.
-                <br>The support you need, right there.</p>
-            </div>
-            <div class="col-2"><i class="d-block fa  fa-3x fa-comment-o"></i></div>
-          </div>
-        </div>
-        <div class="my-3 col-lg-4 col-md-6">
-          <img class="img-fluid d-block mx-auto" src="https://pingendo.github.io/templates/app/iphone_features.png"> </div>
-        <div class="align-self-center text-left col-lg-4 col-md-12">
-          <div class="row my-5">
-            <div class="col-3"><i class="d-block fa fa-battery-empty fa-3x"></i></div>
-            <div class="col-9">
-              <h4>Battery-friendly</h4>
-              <p>Non consuming background operation for longer mobile life</p>
-            </div>
-          </div>
-          <div class="row my-5">
-            <div class="col-3"><i class="d-block mx-auto fa  fa-3x fa-clone"></i></div>
-            <div class="col-9">
-              <h4>Multilayers</h4>
-              <p>Work simultaneously on different panels with the switcher</p>
-            </div>
-          </div>
-          <div class="row my-5">
-            <div class="col-3"><i class="d-block fa  fa-3x fa-heart-o"></i></div>
-            <div class="col-9">
-              <h4>Share the love</h4>
-              <p>Help us spreading the word.
-                <br>Tell your friends with just one-click</p>
-            </div>
+
+  <!-- Intro Header -->
+  <header class="masthead">
+    <div class="intro-body">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <h1 class="brand-heading">Artravelland</h1>
+            <p class="intro-text">When your travell becomes more aesthetic.</p>
+            <a href="#about" class="btn btn-circle page-scroll">
+              <i class="fa fa-angle-double-down animated"></i>
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="py-5 section bg-faded" id="reviews">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div id="carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active flex-column mx-auto">
-                <img src="https://pingendo.github.io/templates/app/reviews_logo_1.png" class="img-block mx-auto d-block" width="250">
-                <div class="blockquote">
-                  <p class="text-muted my-1">I can barely imagine my life without Pingendo</p>
-                  <div class="blockquote-footer">Alex Denver, Tech reviews</div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 offset-md-2">
+        <h2>About Artravelland</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at pharetra massa, vel lacinia sapien. Nam rhoncus lacinia bibendum. Aenean ut faucibus nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at pharetra massa, vel lacinia sapien. Nam rhoncus lacinia bibendum. Aenean ut faucibus nulla.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at pharetra massa, vel lacinia sapien.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Download Section -->
+  <!-- <section id="download" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 offset-md-2">
+                    <h2>Download Grayscale</h2>
+                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
-              </div>
-              <div class="carousel-item flex-column">
-                <img src="https://pingendo.github.io/templates/app/reviews_logo_2.png" class="img-fluid mx-auto d-block">
-                <div class="blockquote">
-                  <p class="text-muted my-1">Pingendo set a new standard for mobile apps. It's time to move toward the future.</p>
-                  <div class="blockquote-footer">Sarah Krichko, APPetizer</div>
-                </div>
-              </div>
-              <div class="carousel-item flex-column">
-                <img src="https://pingendo.github.io/templates/app/reviews_logo_3.png" class="img-fluid mx-auto d-block">
-                <div class="blockquote">
-                  <p class="text-muted my-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                  <div class="blockquote-footer">Miguel Barboso, NewsApps</div>
-                </div>
-              </div>
             </div>
-            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span></a>
-            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span></a>
-          </div>
         </div>
+    </section> -->
+
+  <!-- Contact Section -->
+  <section id="contact" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 offset-md-2">
+        <h2>Contact Artravelland</h2>
+        <p>Feel free to leave us a comment on our <a href="https://facebook.com/ArtRavelland-1840254959627135">Facebook page</a>!</p>
+        <ul class="list-inline banner-social-buttons">
+          <li class="list-inline-item">
+            <a href="https://instagram.com/artravelland" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://facebook.com/ArtRavelland-1840254959627135" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://twitter.com/artravelland" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
-  <div class="py-5 section bg-primary" id="download">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img class="img-fluid d-block mx-auto" src="https://pingendo.github.io/templates/app/iphone_isometric.png"> </div>
-        <div class="col-md-6 text-md-left align-self-center my-5">
-          <h1 class="display-4">Download Pingendo</h1>
-          <h4>Get it on your mobile device. Now</h4>
-          <div class="row mt-5">
-            <div class="col-6 col-md-5">
-              <a href="#cover">
-                <img class="center-block img-fluid d-block" src="https://pingendo.github.io/templates/app/download_android.png"> </a>
-            </div>
-            <div class="col-6 col-md-5">
-              <a href="#cover">
-                <img class="center-block img-fluid d-block" src="https://pingendo.github.io/templates/app/download_ios.png"> </a>
-            </div>
-          </div>
-        </div>
-      </div>
+  </section>
+
+  <!-- Map Section -->
+  <!-- <div id="map"></div> -->
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>Copyright &copy; Artravelland 2017</p>
     </div>
-  </div>
-  <div class="py-5 bg-info" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-9">
-          <p class="text-left lead">Sign up to our newsletter for the latest news</p>
-          <form class="form-inline">
-            <div class="form-group">
-              <input type="email" class="form-control" placeholder="Your e-mail here"> </div>
-            <button type="submit" class="btn btn-primary">Subscribe</button>
-          </form>
-        </div>
-        <div class="col-4 col-md-1 align-self-center">
-          <a href="https://www.facebook.com" target="blank"><i class="fa fa-fw fa-facebook fa-3x text-white"></i></a>
-        </div>
-        <div class="col-4 col-md-1 align-self-center">
-          <a href="https://twitter.com" target="blank"><i class="fa fa-fw fa-twitter fa-3x text-white"></i></a>
-        </div>
-        <div class="col-4 col-md-1 align-self-center">
-          <a href="https://www.instagram.com" target="blank"><i class="fa fa-fw fa-instagram text-white fa-3x"></i></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 my-3">
-          <p>© Copyright 2017 Pingendo - All rights reserved. </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-  <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
-  <script src="https://pingendo.com/assets/scripts/smooth-scroll.js"></script>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/tether/tether.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
+
+  <!-- Custom scripts for this template -->
+  <script src="js/grayscale.min.js"></script>
+  <script>
+    function getRandomArbitrary(min, max) {
+      return Math.round(Math.random() * (max - min) + min);
+    }
+    imageNumber = getRandomArbitrary(1, 5);
+    $(".masthead").css("background-image", "url('../img/intro-bg-" + imageNumber + ".jpg')");
+  </script>
+
 </body>
 
 </html>
